--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 	  I produced a <a href="https://patternizer.github.io/cussh-app/dashboard-beta" target="_blank">dashboard</a> with CMIP6 projections for ETCCDI and Heat Stress Indices for the <a href="https://www.ucl.ac.uk/bartlett/environmental-design/research-projects/2023/nov/complex-urban-systems-sustainability-and-health-cussh" target="_blank">CUSSH Cities</a> project
 	  </br>	  
 	  </br>
-	  I am producing a <a href="https://patternizer.github.io/fire-atlas-app/global-wildfire-atlas-yearly.html" target="_blank">Global Wildfire Atlas</a> with the support of a UEA PVC Impact Study Award.
+	  I am producing a <a href="https://patternizer.github.io/fire-atlas-app/global-fire-dashboard-yearly.html" target="_blank">Global Fire Dashboard</a> with the support of a UEA PVC Impact Study Award.
 	  </br>	  
 	  </br>
 	  I am producing a climate board game (watch this space)!.
@@ -782,7 +782,7 @@
                 <a href="#" data-filter=".js-id-ncc" class="btn btn-primary btn-lg">NCC Climate Mural for our Times</a>
                 <a href="#" data-filter=".js-id-age_of_mammals_app" class="btn btn-primary btn-lg">Age of Mammals App</a>
                 <a href="#" data-filter=".js-id-cussh" class="btn btn-primary btn-lg">CUSSH Cities</a>
-                <a href="#" data-filter=".js-id-fire_atlas" class="btn btn-primary btn-lg">Global Wildfire Atlas</a>
+                <a href="#" data-filter=".js-id-fire_atlas" class="btn btn-primary btn-lg">Global Fire Dashboard</a>
                 <a href="#" data-filter=".js-id-cmip" class="btn btn-primary btn-lg">CMIP6 Hackathon UTCI</a>
                 <a href="#" data-filter=".js-id-fiduceo" class="btn btn-primary btn-lg">H2020 FIDUCEO</a>
                 <a href="#" data-filter=".js-id-sst" class="btn btn-primary btn-lg">ESA SST_CCI</a>
@@ -850,9 +850,9 @@
 <div class="col-lg-12 project-item isotope-item js-id-fire_atlas" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://patternizer.github.io/fire-atlas-app/global-wildfire-atlas-yearly.html" target="_blank" rel="noopener" itemprop="url">Global Wildfire Atlas</a>
+    <a href="https://patternizer.github.io/fire-atlas-app/global-fire-dashboard-yearly.html" target="_blank" rel="noopener" itemprop="url">Global Fire Dashboard</a>
   </span>
-  <p class="project-summary">UEA PVC Impact Study to produce a prototype Global Wildfire Atlas per IPCC AR6 land region for a number of fire parameters retrieved from MODIS</p>
+  <p class="project-summary">UEA PVC Impact Study to produce a prototype Global Fire Dashboard per IPCC AR6 land region for a number of fire parameters retrieved from MODIS</p>
 </div>      
 
 <div class="col-lg-12 project-item isotope-item js-id-ncc" itemscope itemtype="http://schema.org/CreativeWork">
