--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="col-12 col-lg-8">
       <p><strong>CURRENT WORK</strong>: 
 	  
-	  I am a visiting fellow at 
+	  Senior Research Associate at 
 	  <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> working on the 
 	  <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project. 
 	  </p>
@@ -216,8 +216,8 @@
       <a href="https://research.reading.ac.uk/fiduceo/" target="_blank">H2020 FIDUCEO</a>,
       <a href="https://climate.esa.int/en/projects/sea-surface-temperature/" target="_blank">ESA SST_CCI</a>, and
       <a href="https://climate.copernicus.eu/evaluation-and-quality-control-observations" target="_blank">C3S EQCO</a> projects.
-      I am a visiting fellow working on the <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project at 
-	   <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> and producing climate data records and web applications. I computed climate stripes for the Age of Mammals from 66 million years ago for 
+      I am helping update the global land surface air temperature record as part of the <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project at 
+	   <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a>. I computed climate stripes for the Age of Mammals from 66 million years ago for 
 	  the <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank">Climate Mural for our Times</a>. I am fluent in Greek and Spanish and like cycling. Once upon a time I represented Hong Kong in the World
 	  Junior Chess Championships in Adelaide 1988. I have autism.
 	  </p>
@@ -311,16 +311,13 @@
 	  </br>
 	  </br>
 	  I computed the climate stripes for the <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank">Climate Mural for our Times</a> in collaboration with local artist Gennadiy Ivanov, CRU, Global Water Futures and the Transitions Art-Science project 
-	  gifted to Norwich City Council and permanently installed in the Council Chamber. Check out my interactive <a href="https://ncc-stripes-app-99ed067aff9e.herokuapp.com/" target="_blank">Age of Mammals app</a> to view the raw data for the Cenozoic Era with climate model forecasts out to 2200 CE.
+	  gifted to Norwich City Council and permanently installed in the Council Chamber. The raw data spans the Cenozoic Era and includes the instrumental record and climate model forecasts out to 2200 CE.
 	  </br>
 	  </br>
 	  I produced a <a href="https://patternizer.github.io/cussh-app/dashboard-beta" target="_blank">dashboard</a> with CMIP6 projections for ETCCDI and Heat Stress Indices for the <a href="https://www.ucl.ac.uk/bartlett/environmental-design/research-projects/2023/nov/complex-urban-systems-sustainability-and-health-cussh" target="_blank">CUSSH Cities</a> project
 	  </br>	  
 	  </br>
-	  I am producing a <a href="https://patternizer.github.io/fire-atlas-app/global-fire-dashboard-yearly.html" target="_blank">Global Fire Dashboard</a> with the support of a UEA PVC Impact Study Award.
-	  </br>	  
-	  </br>
-	  I am producing a climate board game (watch this space)!.
+	  I produced a <a href="https://patternizer.github.io/fire-atlas-app/global-fire-dashboard-yearly.html" target="_blank">Global Fire Dashboard</a> with the support of a UEA PVC Impact Study Award.
 	  </br>	  
 	  </br>
 	  My open source code is on <a href="https://github.com/patternizer" target="_blank">Github</a>.
