--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <p>I was born in Liverpool, England in 1970 when the monthly mean CO₂ concentration was 325.68 ± 0.12 ppm. 
       I studied Pure &amp; Applied Physics at the University of Manchester (UMIST) 
       and graduated with a BSc (I:hons) in 1992. I obtained a 
-	  <a href="https://ethos.bl.uk/OrderDetails.do?uin=uk.bl.ethos.750568" target="_blank">PhD</a>
+	  <a href="https://research-repository.st-andrews.ac.uk/handle/10023/14235" target="_blank">PhD</a>
 	   in Applied Mathematics in 1996 from the 
       Mathematics Institute of Saint Andrews University on <a href="https://aip.scitation.org/doi/abs/10.1063/1.871070" target="_blank">wave-particle interactions in thermonuclear fusion plasma</a>. 
       I have 20 years postdoctoral research experience in the fields of climate data records, satellite remote sensing, applied statistics and scientific software engineering. 
