--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <h4 class="card-title exp-company text-muted my-0"><a href="https://www.cefas.co.uk/" target="_blank" rel="noopener">CEFAS, UK</a></h4>
             <div class="text-muted exp-meta">
 
-              Dec 2024 – 
+              Dec 2024 – present
                             
                 <span class="middot-divider"></span>
                 <span>UK</span>
