--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   
     <div class="col-12 col-lg-4 section-heading">
       <h1>Michael Taylor</h1>
-      <p>MOS Data Scientist, CEFAS, UK</p>
+      <p>Marine Data Scientist, CEFAS, UK</p>
     </div>
 <!--    
     <div class="col-12 col-lg-8">
